fix count all cluster instance returns wrong value

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ universal = 1
 
 [metadata]
 name = eks-rolling-update
-version = attr: build.__version__.VERSION
+version = 0.0.0
 license = Apache License, Version 2.0
 license_file = LICENSE
 description = EKS Rolling Update is a utility for updating the launch configuration or template of worker nodes in an EKS cluster.
